Update and rename 2022-12-16-presentation-cordova.md to 2022-12-16-portrait.md

--- a/_posts/2022-12-16-portrait.md
+++ b/_posts/2022-12-16-portrait.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: PORTRAIT ANIMÉE
+title: PORTRAIT ANIMÉ
 subtitle: Animation " Hello "
 cover-img: /assets/img/portrait.png
 thumbnail-img: /assets/img/pt.png
@@ -8,6 +8,6 @@ share-img: /assets/img/portrait.png
 tags: [portrait, animation, 2D]
 ---
 
-## Photoshop permet de créer des GIFs animées
+## Photoshop permet de créer des GIFs animés
 Projet scolaire réalisé, lors de ma dernière année en DN MADE : option design numérique. (lycée, Le Paraclet, à Quimper)
 Voir [l'animation](https://drive.google.com/file/d/15Cyo1NolqS7bGtvZ6V5M350NkSz-t5Xk/view?usp=share_link) portrait
